# sirius-rocket-engine

./: .gitignore  .gitmodules  README.md
SIRIUS_Rocket_Engine/: .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  SIRIUS_Rocket_Engine.ioc  STM32F411VETx_FLASH.ld
SIRIUS_Rocket_Engine/Core/Inc/: Engine.h  Rocket.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
SIRIUS_Rocket_Engine/Core/Inc/LowLevelDriver/: PWMHal.h
SIRIUS_Rocket_Engine/Core/Inc/Sensors/: PressureSensor.h
SIRIUS_Rocket_Engine/Core/Src/: Engine.c  Rocket.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
SIRIUS_Rocket_Engine/Core/Src/LowLevelDriver/: PWMHal.c
SIRIUS_Rocket_Engine/Core/Src/Sensors/: PressureSensor.c
SIRIUS_Rocket_Engine/EWARM/: Project.eww  SIRIUS_Rocket_Engine.ewd  SIRIUS_Rocket_Engine.ewp  stm32f411xe_flash.icf  stm32f411xe_sram.icf
SIRIUS_Rocket_Engine/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
SIRIUS_Rocket_Engine/cmake/stm32cubemx/: CMakeLists.txt
